# PASCC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: pytest.yml
include/: ast.h  compiler.h  parser.h  parser.tab.h  pstdlib.h  symbol.h  symbol_table.h  type.h
main/: main.cc
scripts/: ast_json.json  corr_test.py  large_test_generator.py  lex.l  parser.y  pascal-S.sample.pas  std.c
scripts/json/: ast_json.cc
scripts/json/input/: max.json
scripts/json/output/: max.c
scripts/pas/: sort.pas  test.pas
src/: a.out  ast.cc  ast_json.cc  compiler.cc  lex.yy.cc  main.cc  parser.tab.cc  pstdlib.cc  symbol.cc  symbol_table.cc  test.cc  type.cc  type_assert.cc  type_check.cc
test/: auto_test.py  corr_test.py  err_test.py  json_test.cc  test.cc  test_main.cc  test_sample.py
test/corrtest/input/: input01.pas  input02.pas  input03  input03.c  input03.pas  input04.pas  input05.pas  input06.pas  input06.txt  input07.pas  input08.pas  input08.txt  input09.pas  input09.txt  input10.pas  input11.pas  input12.pas
test/corrtest/output/: otuput05.txt  output01.txt  output02.txt  output03.txt  output04.txt  output05.txt  output06.txt  output07.txt  output08.txt
test/errtest/: err_test.py  input02.txt
test/errtest/input/: input01.pas
test/errtest/output/: output01.txt
test/input/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt
test/output/: output01.txt
